--- a/css/styles.css
+++ b/css/styles.css
@@ -1,68 +1,229 @@
+:root {
+    --bgcolor: #284149;
+    --txtcolor: #FBEDF3;
+    --bordercolor: #485159;
+    --bordercolorhover: #FFD56F;
+    --txtbtncolor: #F3A333;
+    --shadowcolor: #222;
+    --txtcenteraligned: center;
+    --fontArvo: "Arvo", cursive;
+}
+
+html {
+    -webkit-text-size-adjust: 100%;
+}
+
 body {
-    background-color: #284149;
-    text-align: center;
+    background-color: var(--bgcolor);
+    color: var(--txtcolor);
+    font-family: var(--fontArvo);
+    margin: 0;
+    text-align: var(--txtcenteraligned);
 }
 
 h1 {
-    font-family: "Arvo", cursive;
-    font-size: 5rem;
-    color: #FBEDF3;
+    font-size: 4rem;
     text-shadow: 2px 0 #DA0463;
 }
 
+@media screen and (min-width: 900px) {
+    h1 {
+        font-size: 5rem;
+    }
+}
+
 footer {
-    color: #FBEDF3;
-    font-family: sans-serif;
+    color: var(--txtcolor);
+    font-family: "Ubuntu", sans-serif;
+    font-size: 14px;
+    opacity: 65%;
+    padding: 25px 5%;
+    position: relative;
 }
 
-.instruments {
-    margin: 10% auto;    
+@media screen and (min-width: 900px) {
+    footer {
+        font-size: 16px;
+    }
 }
 
-.drum {
-    background-color: #FBEDF3;
+@media screen and (max-width: 500px) {
+    footer {
+        font-size: 13px;
+    }
+}
+
+.main {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow-y: auto;
+}
+
+.main .main-container {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    height: 100%;
+    max-width: 100vw;
+}
+
+@media screen and (min-width: 900px) {
+    .main .main-container {
+        height: 100vh;
+        max-height: 100vh;
+        align-items: center;
+        overflow: hidden;
+    }
+}
+
+.main .main-container .main-container-inner {
+    box-sizing: border-box;
+    display: flex;
+    margin: 0;
+    padding: 7.5px;
+    position: relative;
+    width: 100vw;
+    max-width: 1280px;
+}
+
+@media screen and (min-width: 900px) {
+    .main .main-container .main-container-inner {
+        height: 100vh;
+        max-height: 791px;
+    }
+}
+
+@media screen and (min-width: 500px) {
+    .main .main-container .main-container-inner {
+        padding: 20px;
+    }
+}
+
+.main .main-container .main-container-inner ._inner-container {
+    flex-wrap: wrap;
+    flex-basis: 100%;
+    padding: 15px;
+    overflow: hidden;
+    user-select: none;
+    -webkit-user-select: none;
+    z-index: 2;
+}
+
+@media screen and (min-width: 500px) {
+    .main .main-container .main-container-inner ._inner-container {
+        padding: 30px;
+    }
+}
+
+main.mainSection {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+main.mainSection .container {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    height: calc(100% - 102px);
+    min-height: calc(100% - 102px);
+    padding: 0 40px;
+}
+
+main.mainSection .container .instruments {
+    margin: 30px auto 40px;    
+}
+
+main.mainSection .container .instruments button.drum {
+    background-color: var(--txtcolor);
     border: 10px solid;
-    border-color: #485159;
+    border-color: var(--bordercolor);
     border-radius: 15px;
-    color: #F3A333;
+    color: var(--txtbtncolor);
     display: inline-block;
-    font-family: "Arvo", cursive;
-    font-size: 5rem;
-    font-weight: 900;
-    line-height: 1.5;
+    font-size: 4rem;
+    font-weight: 800;
+    line-height: 1.25;
     margin: 10px;
     outline: none;
     text-align: center;
-    text-shadow: 3px 2px #222;
-    width: 150px;
-    height: 150px;
+    text-shadow: 3px 2px var(--shadowcolor);
+    width: 120px;
+    height: 120px;
 }
 
-.drum:hover {
-    border-color: #FFD56F;
+@media screen and (min-width: 900px) {
+    main.mainSection .container .instruments button.drum {
+        font-size: 5rem;
+        font-weight: 900;
+        line-height: 1.5;
+        width: 150px;
+        height: 150px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    main.mainSection .container .instruments button.drum {
+        font-size: 3rem;
+        font-weight: 700;
+        line-height: 1.15;
+        width: 100px;
+        height: 100px;
+        text-shadow: 2px 1px var(--shadowcolor);
+    }
+}
+
+main.mainSection .container .instruments button.drum:hover {
+    border-color: var(--bordercolorhover);
     opacity: 0.65;
     cursor: pointer;
-    box-shadow: 2px 2px #222;
+    box-shadow: 2px 2px var(--shadowcolor);
 }
 
-.w {
+main.mainSection .container .instruments button.w {
     background-image: url("../images/tom1.png");
 }
-.a {
+main.mainSection .container .instruments button.a {
     background-image: url("../images/tom2.png");
 }
-.s {
+main.mainSection .container .instruments button.s {
     background-image: url("../images/tom3.png");
 }
-.d {
+main.mainSection .container .instruments button.d {
     background-image: url("../images/tom4.png");
 }
-.j {
+main.mainSection .container .instruments button.j {
     background-image: url("../images/snare.png");
 }
-.k {
+main.mainSection .container .instruments button.k {
     background-image: url("../images/crash.png");
 }
-.l {
+main.mainSection .container .instruments button.l {
     background-image: url("../images/kick.png");
+}
+
+footer .footer-container {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+@media screen and (min-width: 607px) {
+    footer .footer-container {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
 }
